test/pass/success_single/identity/src/Identity.hx
package;

class Identity {
	public static function identity<T>(x:T):T {
		return x;
	}
}
