test/error/compile_error_missing_semicolon/src/CompileErrorMissingSemicolon.hx
package;

class CompileErrorMissingSemicolon {
	public static function identity<T>(x:T):T {
		return x
	}
}
